--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,3 +1,5 @@
-<p>
-  navbar works!
-</p>
+<div class="navbar">
+  <img id="Z-img" width="100" src="../../assets/img/Z-img.png">
+  <a href="#home">Home</a>
+  <a href="mailto:Zachary@admiralfeb.net" target="_blank">Contact</a>
+</div>
