Add Construction image test

--- a/src/app/under-construction/under-construction.component.html
+++ b/src/app/under-construction/under-construction.component.html
@@ -1,6 +1,6 @@
 <div class="container" id="under-construction">
   <h2>This page is currently under construction.</h2>
-  <img width="300" alt="Under Construction"
+  <img id="imgUnderConstruction" width="300" alt="Under Construction"
     src="../../assets/img/construction.jpg">
 
 </div>
