refactored to core

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,1 @@
-<div style="text-align:center">
-  <h1>
-    Welcome to {{ title }}!
-  </h1>
-</div>
-
-<app-under-construction></app-under-construction>
-<app-navbar></app-navbar>
+<app-core></app-core>
