--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,7 @@
     background-color:blanchedalmond;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
+
+body {
+    margin: 0;
+}
