--- a/src/app/modules/shared-module/navbar/navbar.component.css
+++ b/src/app/modules/shared-module/navbar/navbar.component.css
@@ -4,12 +4,14 @@
     position: fixed;
     bottom: 0;
     width: 100%;
+    height: 50px;
 }
 
 .navbar img {
     float: left;
     display: block;
     bottom: 0;
+    width: 50px
 }
 
 .navbar a {
@@ -18,7 +20,7 @@
     display: block;
     color: #f2f2f2;
     text-align: center;
-    padding: 40px 16px;
+    padding: 15px 16px;
     text-decoration: none;
     font-size: 17px;
 }
