--- a/src/app/modules/shared-module/navbar/navbar.component.html
+++ b/src/app/modules/shared-module/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <div class="navbar">
-  <img id="Z-img" width="100" src="../../../../assets/img/Z-img.png">
+  <img id="Z-img" src="../../../../assets/img/Z-img.png">
   <a href="#home">Home</a>
-  <a href="mailto:Zachary@admiralfeb.net" target="_blank">Contact</a>
+  <a href="mailto:Zachary@admiralfeb.net" title="Mail the owner of the site" target="_blank">Contact</a>
 </div>
