Wishlist initial updates. Need to build the entire item.

--- a/src/app/modules/core/core.component.html
+++ b/src/app/modules/core/core.component.html
@@ -1,8 +1,6 @@
 <div style="text-align:center">
-  <h1>
-    Welcome to {{ title }}!
-  </h1>
+    <h1>Welcome to {{ title }}!</h1>
 </div>
 
-<router-outlet></router-outlet>
-<app-navbar></app-navbar>
+<app-under-construction></app-under-construction>
+
