--- a/src/app/modules/shared-module/navbar/navbar.component.html
+++ b/src/app/modules/shared-module/navbar/navbar.component.html
@@ -1,5 +1,7 @@
 <div class="navbar">
   <img id="Z-img" src="../../../../assets/img/Z-img.png">
-  <a href="#home">Home</a>
+  <a href="/home">Home</a>
+  <a href="/wishlist">Wishlist</a>
   <a href="mailto:Zachary@admiralfeb.net" title="Mail the owner of the site" target="_blank">Contact</a>
+
 </div>
