--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,10 @@
-* {
+html, body {
     background-color:blanchedalmond;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    margin: 0 !important;
+    padding: 0;
 }
 
-body {
+h1 {
     margin: 0;
 }
