--- a/src/app/modules/shared-module/navbar/navbar.component.css
+++ b/src/app/modules/shared-module/navbar/navbar.component.css
@@ -11,7 +11,11 @@
     width: 50px
 }
 
-.navbar a {
+#homeImage {
+    padding: 0;
+}
+
+.navbar .linkText {
     background-color: #333;
     float: left;
     display: block;
