--- a/src/app/modules/shared-module/navbar/navbar.component.html
+++ b/src/app/modules/shared-module/navbar/navbar.component.html
@@ -1,7 +1,8 @@
 <div class="navbar">
-  <img id="Z-img" src="../../../../assets/img/Z-img.png">
-  <a href="/home">Home</a>
-  <a href="/wishlist">Wishlist</a>
-  <a href="mailto:Zachary@admiralfeb.net" title="Mail the owner of the site" target="_blank">Contact</a>
+  <a class="linkImage" href="/home" title="Home"><img id="Z-img" src="../../../../assets/img/Z-img.png"></a>
+  <a class="linkText" href="/home">Home</a>
+  <a class="linkText" href="/wishlist">Wishlist</a>
+  <a class="linkText" href="mailto:Zachary@admiralfeb.net" title="Mail the owner of the site"
+    target="_blank">Contact</a>
 
 </div>
