wishlist routing and default items added

--- a/src/app/modules/shared-module/navbar/navbar.component.html
+++ b/src/app/modules/shared-module/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <div class="navbar">
-  <a class="linkImage" href="/home" title="Home"><img id="Z-img" src="../../../../assets/img/Z-img.png"></a>
-  <a class="linkText" href="/home">Home</a>
-  <a class="linkText" href="/wishlist">Wishlist</a>
+  <a class="linkImage" routerLink="home" title="Go to the Home Page"><img id="Z-img" src="../../../../assets/img/Z-img.png"></a>
+  <a class="linkText" routerLink="home" routerLinkActive="active">Home</a>
+  <a class="linkText" routerLink="wishlist" routerLinkActive="active">Wishlist</a>
   <a class="linkText" href="mailto:Zachary@admiralfeb.net" title="Mail the owner of the site"
     target="_blank">Contact</a>
 
