--- a/src/app/modules/wishlist/wishlist.component.html
+++ b/src/app/modules/wishlist/wishlist.component.html
@@ -1,8 +1,3 @@
-<div><h1>Zachary's Wishlist will be here soon.</h1>
-    <p>Until it arrives, you can access the wishlist via the Microsoft® OneNote
-        link below.</p>
-    <iframe
-        src="https://onedrive.live.com/embed?cid=9C0BED0D19EFBA31&resid=9C0BED0D19EFBA31%21486051&authkey=AFr1xRe_t7of9yg"
-        width="98" height="120" frameborder="0" scrolling="no"></iframe>
-    <app-under-construction></app-under-construction>
-</div>
+<app-nav></app-nav>
+<h1>Zachary's Wishlist</h1>
+<div class="container"><router-outlet></router-outlet></div>
