--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
 html, body {
-    background-color:blanchedalmond;
+    background-color:lightgray;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0 !important;
     padding: 0;
