--- a/src/app/modules/wishlist/nav/nav.component.css
+++ b/src/app/modules/wishlist/nav/nav.component.css
@@ -3,6 +3,7 @@
     overflow: hidden;
     width: 100%;
     height: 30px;
+    padding: 3px;
 }
 
 #homeImage {
@@ -13,6 +14,8 @@
     background-color: #333;
     float: left;
     display: block;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
     color: #f2f2f2;
     text-align: center;
     padding: 5px 16px;
