bring nav to wishlist base

--- a/src/app/modules/wishlist/nav/nav.component.html
+++ b/src/app/modules/wishlist/nav/nav.component.html
@@ -1,9 +1,9 @@
 <div class="navbar">
     <a class="linkText" routerLink="main" routerLinkActive="active">Wishlist Home</a>
-    <a class="linkText" routerLink="home" routerLinkActive="active">Home stuff</a>
+    <!-- <a class="linkText" routerLink="home" routerLinkActive="active">Home stuff</a>
     <a class="linkText" routerLink="clothing" routerLinkActive="active">Clothing and Related</a>
     <a class="linkText" routerLink="money" routerLinkActive="active">Gift Cards and Money</a>
     <a class="linkText" routerLink="other" routerLinkActive="active">Other</a>
     <a class="linkText" routerLink="tech" routerLinkActive="active">Tech</a>
-    <a class="linkText" routerLink="video" routerLinkActive="active">Video</a>
+    <a class="linkText" routerLink="video" routerLinkActive="active">Video</a> -->
   </div>
