Move wishlist navbar to main navbar

--- a/src/app/modules/shared-module/navbar/navbar.component.html
+++ b/src/app/modules/shared-module/navbar/navbar.component.html
@@ -1,8 +1,12 @@
 <div class="navbar">
-  <a class="linkImage" routerLink="home" title="Go to the Home Page"><img id="Z-img" src="../../../../assets/img/Z-img.png"></a>
-  <a class="linkText" routerLink="home" routerLinkActive="active">Home</a>
-  <a class="linkText" routerLink="wishlist" routerLinkActive="active">Wishlist</a>
-  <a class="linkText" href="mailto:Zachary@admiralfeb.net" title="Mail the owner of the site"
+  <a class="linkImage" routerLink="home" title="Go to the Home Page"><img
+      id="Z-img" src="../../../../assets/img/Z-img.png"></a>
+  <a class="linkText btn" id="btnHome" routerLink="home" routerLinkActive="active" (click)="onNavfromWishlist($event.target,'home')">Home</a>
+  <a class="linkText btn" id="btnWL" routerLink="wishlist" routerLinkActive="active" (click)="onWishlistClick()">Wishlist</a>
+  <a class="linkText" href="mailto:Zachary@admiralfeb.net" title="Mail the owner
+    of the site"
     target="_blank">Contact</a>
-
+</div>
+<div class="wishlist">
+  <app-wl-nav></app-wl-nav>
 </div>
