--- a/src/app/modules/shared-module/navbar/navbar.component.css
+++ b/src/app/modules/shared-module/navbar/navbar.component.css
@@ -25,13 +25,38 @@
     text-decoration: none;
     font-size: 17px;
 }
+.navbar button {
+    background-color: #333;
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 15px 16px;
+    text-decoration: none;
+    font-size: 17px;
+    border:0px;
+}
 
-.navbar a:hover {
+.navbar a:hover,button:hover {
     background-color: #ddd;
     color: black;
+    cursor: pointer;
+}
+.navbar button:hover {
+    background-color: #ddd;
+    color: black;
+
 }
 
 .navbar a.active {
     background-color: rgb(163,73,164);
     color: white;
+}
+.active {
+    background-color: rgb(163,73,164);
+    color: white;
+}
+
+.wishlist{
+    display:none;
 }
