--- a/src/app/modules/shared-module/navbar/navbar.component.html
+++ b/src/app/modules/shared-module/navbar/navbar.component.html
@@ -4,6 +4,7 @@
   <a class="linkText btn" id="btnHome" routerLink="home" routerLinkActive="active" (click)="onClick($event.target.text)">Home</a>
   <a class="linkText btn" id="btnWL" routerLink="wishlist" routerLinkActive="active" (click)="onClick($event.target.text)">Wishlist</a>
   <a class="linkText btn" id="btnCode" routerLink="code" routerLinkActive="active" (click)="onClick($event.target.text)">Code</a>
+  <a class="linkText btn" id="btnAbout" routerLink="about" routerLinkActive="active" (click)="onClick($event.targer.value)">About</a>
   <a class="linkText" href="mailto:Zachary@admiralfeb.net" title="Mail the owner
     of the site"
     target="_blank">Contact</a>
