--- a/src/app/modules/core/core.component.css
+++ b/src/app/modules/core/core.component.css
@@ -1,3 +1,27 @@
+* {
+    box-sizing: border-box;
+}
 div{
     margin: 0;
+}
+.column{
+    float:left;
+    padding: 10px;
+}
+.row:after{
+    content: "";
+    display: table;
+    clear: both;
+}
+.left{
+    width: 25%;
+}
+.right{
+    width: 75%
+}
+.dw{
+    color: blue;
+}
+p {
+    text-indent: 10px;
 }
