--- a/src/app/modules/core/core.component.html
+++ b/src/app/modules/core/core.component.html
@@ -8,7 +8,7 @@
     <div class="column right">
         <h2>The page is coming along</h2>
         <p>While you wait, here's a lovely video. <span class="dw">Doctor Who</span>
-            is coming in October</p>
-            <iframe width="100%" height="515" src="https://www.youtube.com/embed/gm2PXshWC_0?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            is coming <span class="dw">October 7th!</span></p>
+            <iframe width="100%" height="515" src="https://www.youtube.com/embed/gm2PXshWC_0?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen>Loading...</iframe>
     </div>
 </div>
