--- a/src/app/modules/core/core.component.html
+++ b/src/app/modules/core/core.component.html
@@ -1,14 +1,16 @@
 <div style="text-align:center">
-    <h1>Welcome to {{ title }}!</h1>
+  <h1>Welcome to {{ title }}!</h1>
 </div>
 <div class="row">
-    <div class="column left">
-        <app-under-construction></app-under-construction>
-    </div>
-    <div class="column right">
-        <h2>The page is coming along</h2>
-        <p>While you wait, here's a lovely video. <span class="dw">Doctor Who</span>
-            is coming <span class="dw">October 7th!</span></p>
-            <iframe width="100%" height="515" src="https://www.youtube.com/embed/gm2PXshWC_0?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen>Loading...</iframe>
-    </div>
+  <div class="column left">
+    <app-under-construction></app-under-construction>
+  </div>
+  <div class="column right">
+    <h2>The page is coming along</h2>
+    <p>While you wait, here's a lovely video. <span class="dw">Doctor Who</span>
+      is coming <span class="dw">October 7th!</span> Only <app-countdown class="dw" [inputDate]="'October 7 2018'">Loading
+        Countdown</app-countdown> until that wonderful day!</p>
+    <iframe width="100%" height="515" src="https://www.youtube.com/embed/gm2PXshWC_0?rel=0" frameborder="0" allow="autoplay; encrypted-media"
+      allowfullscreen>Loading...</iframe>
+  </div>
 </div>
