Update DW Countdown with correct time

--- a/src/app/modules/core/core.component.html
+++ b/src/app/modules/core/core.component.html
@@ -2,9 +2,8 @@
   <h1>Welcome to {{ title }}!</h1>
 </div>
 <div class="jumbotron">
-  <p id="coming"><span class="dw">Doctor Who</span> is coming <span class="dw">October 7th</span>!</p>
-  <p>Only <app-countdown class="dw" [inputDate]="'October 7 2018'">Loading Countdown</app-countdown> until that
-    wonderful day!</p>
+  <p id="coming"><span class="dw">Doctor Who</span> is coming <span class="dw">October 7th</span> at <span class="dw">6:45pm UTC/12:45pm Central Time</span>!</p>
+  <p>Only <app-countdown class="dw" [inputDate]="'2018-10-07T18:45:00Z'">Loading Countdown</app-countdown> until it starts!</p>
   <div class="embed-responsive embed-responsive-16by9">
     <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/XCt6f1Ttmy4?rel=0&amp;start=5" frameborder="0" allow="autoplay; encrypted-media"
       allowfullscreen></iframe>
