--- a/src/app/modules/core/core.component.html
+++ b/src/app/modules/core/core.component.html
@@ -2,10 +2,10 @@
   <h1>Welcome to {{ title }}!</h1>
 </div>
 <div class="jumbotron">
-  <p id="coming"><span class="dw">Doctor Who S11 E1:<i>The Woman Who Fell to Earth</i></span> is coming <span class="dw">{{'2018-10-07T17:45:00Z' | date:'MMMM d, h:mm a z' }}</span>!</p>
+  <p id="coming">The <span class="dw">Doctor Who S11 E1:<i>The Woman Who Fell to Earth</i></span> simulcast is coming <span class="dw">{{'2018-10-07T17:45:00Z' | date:'MMMM d, h:mm a z' }}</span>!</p>
   <p>Only <app-countdown class="dw" [inputDate]="'2018-10-07T17:45:00Z'">Loading Countdown</app-countdown> until it starts!</p>
   <div class="embed-responsive embed-responsive-16by9">
-    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/XCt6f1Ttmy4?rel=0&amp;start=5" frameborder="0" allow="autoplay; encrypted-media"
+    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/L6QRnULIjv4" frameborder="0" allow="autoplay; encrypted-media"
       allowfullscreen></iframe>
   </div>
 </div>
