--- a/src/app/modules/wishlist/_main/main.component.html
+++ b/src/app/modules/wishlist/_main/main.component.html
@@ -1,7 +1,7 @@
 <div id="main" class="jumbotron">
   <h3 class="text-center">Welcome to Zachary's Wishlist</h3>
   <div>
-    <p class="text-center">Zachary's Wishlist will be here soon.</p>
+    <h4 class="text-center">Zachary's Wishlist will be here soon.</h4>
     <p>Until it arrives, you can access the wishlist via the Microsoft<sup>®</sup>
       OneNote link below.</p>
       <div class="loadcontainer"><app-loader id="oneNoteLoader"></app-loader></div>
