--- a/src/app/modules/about/profile/profile.component.html
+++ b/src/app/modules/about/profile/profile.component.html
@@ -1,6 +1,6 @@
 <div class="jumbotron">
   <p>
-    name = {{profile.id}}
+    profile id = {{profile.id}}
+    profile name = {{ profile.displayName}}
   </p>
-  <p>{{profile}}</p>
 </div>
