Style Changes for Wishlist

--- a/src/app/modules/core/navbar/navbar.component.css
+++ b/src/app/modules/core/navbar/navbar.component.css
@@ -13,7 +13,11 @@
   float: left;
   display: block;
   margin-right: 1em;
-  width: 51px
+  width: 52px
+}
+.navbar .linkImage {
+  width: 52px;
+  height: auto;
 }
 
 .navbar .linkText {
@@ -22,10 +26,11 @@
   display: block;
   color: #f2f2f2;
   text-align: center;
-  padding: 15px;
+  padding: 10px;
   text-decoration: none;
   font-size: 15px;
   margin: 0;
+  margin-left: 1em;
 }
 
 .navbar a:hover,
