--- a/src/app/modules/wishlist/wishlist.component.html
+++ b/src/app/modules/wishlist/wishlist.component.html
@@ -1,7 +1,7 @@
 <div class="container header">
   <div class="row d-flex align-items-center">
     <div class="col-sm-1 d-flex align-items-center">
-      <div class="hamburger" (click)="hamburger()">
+      <div class="hamburger" (click)="hamburger()" data-toggle="tooltip" data-placement="right" title="Show/Hide the Navigation Panel">
         <div class="bar1"></div>
         <div class="bar2"></div>
         <div class="bar3"></div>
@@ -24,7 +24,7 @@
       <li>
         <a class="linkText" routerLink="main" routerLinkActive="active">Wishlist Home</a>
       </li>
-      <li>
+      <!-- <li>
         <a class="linkText" routerLink="home" routerLinkActive="active">Home stuff</a>
       </li>
       <li>
@@ -41,7 +41,7 @@
       </li>
       <li>
         <a class="linkText" routerLink="video" routerLinkActive="active">Video</a>
-      </li>
+      </li> -->
     </ul>
   </nav>
 
