--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,5 @@
+@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
+
 html, body {
     background-color:lightgray !important;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -8,3 +10,5 @@ html, body {
 h1 {
     margin: 0;
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: 'Roboto', sans-serif; }
