--- a/src/styles.css
+++ b/src/styles.css
@@ -1,14 +1,63 @@
 @import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
 
-html, body {
-    background-color:lightgray !important;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    margin: 0 !important;
-    padding: 0;
+html,
+body {
+  background-color: lightgray !important;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  margin: 0 !important;
+  padding: 0;
 }
 
 h1 {
-    margin: 0;
+  margin: 0;
 }
-html, body { height: 100%; }
-body { margin: 0; font-family: 'Roboto', sans-serif; }
+
+html,
+body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  font-family: 'Roboto', sans-serif;
+}
+
+.hamburger {
+  cursor: pointer;
+  margin: 0 auto;
+}
+
+.md-24 {
+  font-size: 24px;
+}
+
+.md-36 {
+  font-size: 36px;
+}
+
+.md-48 {
+  font-size: 48px;
+}
+
+.navbar a.active,
+.nav a.active {
+  background-color: rgb(163, 73, 164);
+  color: white;
+}
+
+.navbar a:hover,
+.nav a:hover {
+  background-color: #ddd;
+  color: black;
+  cursor: pointer;
+}
+
+.nav .linktext,
+.navbar .linkText {
+  background-color: #333;
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-decoration: none !important;
+  font-size: 17px;
+}
