--- a/src/app/modules/wishlist/wishlist.component.html
+++ b/src/app/modules/wishlist/wishlist.component.html
@@ -12,7 +12,7 @@
 
 <div class="wrapper">
   <nav id="sidebar" class="nav flex-column">
-    <div class="sidebar-header">
+    <div class="sidebar-header text-center">
       <h3>Navigation</h3>
     </div>
 
@@ -20,7 +20,7 @@
       <li>
         <a class="nav-link" routerLink="main" routerLinkActive="active">Wishlist Home</a>
       </li>
-      <li>
+<!--       <li>
         <a class="nav-link" routerLink="home" routerLinkActive="active">Home stuff</a>
       </li>
       <li>
@@ -37,7 +37,7 @@
       </li>
       <li>
         <a class="nav-link" routerLink="video" routerLinkActive="active">Video</a>
-      </li>
+      </li> -->
     </ul>
   </nav>
 
