--- a/src/app/modules/code/modules/dining-selector/messages/messages.component.html
+++ b/src/app/modules/code/modules/dining-selector/messages/messages.component.html
@@ -1,6 +1,11 @@
-<div class="messages">
-  <h2>Messages</h2>
-  <button class="clear" (click)="messageService.clear()">clear</button>
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <h2>Messages</h2>
+    </div>
+    <div class="col">
+      <button class="clear" (click)="messageService.clear()">clear</button>
+    </div>
+  </div>
   <div class="list" *ngFor='let message of messageService.messages'> {{message}} </div>
-
 </div>
