--- a/src/app/modules/code/code.component.html
+++ b/src/app/modules/code/code.component.html
@@ -18,7 +18,7 @@
       <li>
         <a class="nav-link" routerLink="main" routerLinkActive="active">Code Home</a>
       </li><li>
-        <a class="nav-link" routerLink="dining_selector" routerLinkActive="active">Dining Options</a>
+        <a class="nav-link" routerLink="dining_selector" routerLinkActive="active">Dining Selector</a>
       </li>
     </ul>
   </nav>
