--- a/src/app/modules/code/modules/dining-selector/dining-selector.component.html
+++ b/src/app/modules/code/modules/dining-selector/dining-selector.component.html
@@ -1,5 +1,7 @@
-<h1>
-  Welcome to {{ title }}!
-</h1>
-<app-dining-option></app-dining-option>
-<app-messages></app-messages>
+<div class="jumbotron pt-3">
+  <h3 class="text-center">
+    Welcome to {{ title }}!
+  </h3>
+  <app-dining-option></app-dining-option>
+  <app-messages></app-messages>
+</div>
