Wishlist pages created with basic text

--- a/src/app/modules/wishlist/wishlist.component.html
+++ b/src/app/modules/wishlist/wishlist.component.html
@@ -1,13 +1,13 @@
-  <div class="row d-flex align-items-center">
-    <div class="col-sm-1 h-100 d-flex align-items-center">
-        <i class="material-icons md-36 hamburger" (click)="hamburger()" [matTooltip]="tipNavButton" matTooltipPosition="after">
-          menu
-          </i>
-    </div>
-    <div class="col">
-      <h1>Zachary's Wishlist</h1>
-    </div>
+<div class="row d-flex align-items-center">
+  <div class="col-sm-1 h-100 d-flex align-items-center">
+    <i class="material-icons md-36 hamburger" (click)="hamburger()" [matTooltip]="tipNavButton" matTooltipPosition="after">
+      menu
+    </i>
   </div>
+  <div class="col">
+    <h1>Zachary's Wishlist</h1>
+  </div>
+</div>
 
 
 <div class="wrapper">
@@ -20,14 +20,14 @@
       <li>
         <a class="nav-link" routerLink="main" routerLinkActive="active">Wishlist Home</a>
       </li>
-<!--       <li>
+      <li>
+        <a class="nav-link" routerLink="clothing" routerLinkActive="active">Clothing</a>
+      </li>
+      <li>
         <a class="nav-link" routerLink="home" routerLinkActive="active">Home stuff</a>
       </li>
       <li>
-        <a class="nav-link" routerLink="clothing" routerLinkActive="active">Clothing and Related</a>
-      </li>
-      <li>
-        <a class="nav-link" routerLink="money" routerLinkActive="active">Gift Cards and Money</a>
+        <a class="nav-link" routerLink="money" routerLinkActive="active">Money and Gift Cards</a>
       </li>
       <li>
         <a class="nav-link" routerLink="other" routerLinkActive="active">Other</a>
@@ -37,7 +37,7 @@
       </li>
       <li>
         <a class="nav-link" routerLink="video" routerLinkActive="active">Video</a>
-      </li> -->
+      </li>
     </ul>
   </nav>
 
