--- a/src/app/modules/wishlist/_main/main.component.html
+++ b/src/app/modules/wishlist/_main/main.component.html
@@ -1,5 +1,5 @@
 <div id="main" class="jumbotron">
-  <h3 class="text-center">Welcome to Zachary's Wishlist</h3>
+  <h3 class="text-center">Wishlist Home Page</h3>
   <div>
     <h4 class="text-center">Zachary's Wishlist will be here soon.</h4>
     <p>Until it arrives, you can access the wishlist via the Microsoft<sup>®</sup>
@@ -12,4 +12,5 @@
       target="_blank">Zachary@admiralfeb.net</a></p>
   <p>This is a general idea of what I would like. I try to keep it up to date
     as much as possible. I like things that are useful.</p>
+  <p>Another option is to make a donation in my name to any LGBTQ+ friendly charity.</p>
 </div>
