--- a/src/app/modules/wishlist/clothing/clothing.component.html
+++ b/src/app/modules/wishlist/clothing/clothing.component.html
@@ -1,3 +1,6 @@
-<p>
-  clothing works!
-</p>
+<div class="jumbotron">
+  <h3 class="text-center">Clothing and Other Articles</h3>
+  <p class="text-center">Please go back to the <a routerLink="../main">Main Page</a> to access the current Wishlist Notebook.</p>
+  <app-under-construction></app-under-construction>
+</div>
+
