--- a/src/app/modules/wishlist/money/money.component.html
+++ b/src/app/modules/wishlist/money/money.component.html
@@ -1,3 +1,5 @@
-<p>
-  money works!
-</p>
+<div class="jumbotron">
+  <h3 class="text-center">Money and Gift Cards</h3>
+  <p class="text-center">Please go back to the <a routerLink="../main">Main Page</a> to access the current Wishlist Notebook.</p>
+  <app-under-construction></app-under-construction>
+</div>
