--- a/src/app/modules/wishlist/tech/tech.component.html
+++ b/src/app/modules/wishlist/tech/tech.component.html
@@ -1,3 +1,5 @@
-<p>
-  tech works!
-</p>
+<div class="jumbotron">
+  <h3 class="text-center">Technology</h3>
+  <p class="text-center">Please go back to the <a routerLink="../main">Main Page</a> to access the current Wishlist Notebook.</p>
+  <app-under-construction></app-under-construction>
+</div>
