Moved material to SharedModule and adjusted dependencies in sub-modules

--- a/src/app/modules/wishlist/_main/main.component.html
+++ b/src/app/modules/wishlist/_main/main.component.html
@@ -4,7 +4,7 @@
     <h4 class="text-center">Zachary's Wishlist will be here soon.</h4>
     <p>Until it arrives, you can access the wishlist via the Microsoft<sup>®</sup>
       OneNote link below.</p>
-      <div class="loadcontainer"><app-loader id="oneNoteLoader"></app-loader></div>
+      <div class="loadcontainer"><mat-spinner id="oneNoteLoader" style="margin:0 auto;"></mat-spinner></div>
     <iframe id="frmOneNote" src="https://onedrive.live.com/embed?cid=9C0BED0D19EFBA31&resid=9C0BED0D19EFBA31%21486051&authkey=AFr1xRe_t7of9yg"
       width="98" height="120" frameborder="0" scrolling="no">Loading OneNote frame...</iframe>
   </div>
