--- a/src/app/modules/code/modules/dining-selector/messages/messages.component.html
+++ b/src/app/modules/code/modules/dining-selector/messages/messages.component.html
@@ -4,7 +4,7 @@
       <h2>Messages</h2>
     </div>
     <div class="col">
-      <button class="clear" (click)="messageService.clear()">clear</button>
+      <button mat-button class="clear" (click)="messageService.clear()">clear</button>
     </div>
   </div>
   <div class="list" *ngFor='let message of messageService.messages'> {{message}} </div>
