--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,5 @@
-@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
+/* @import '~@angular/material/prebuilt-themes/deeppurple-amber.css'; */
+/* @import './z-theme.scss'; */
 
 html,
 body {
