--- a/src/z-theme.scss
+++ b/src/z-theme.scss
@@ -6,19 +6,52 @@
 // Be sure that you only ever include this mixin once!
 @include mat-core();
 
+$my-purple: (
+    50 : #f4e9f4,
+    100 : #e3c8e4,
+    200 : #d1a4d2,
+    300 : #bf80bf,
+    400 : #b164b2,
+    500 : #a349a4,
+    600 : #9b429c,
+    700 : #913992,
+    800 : #883189,
+    900 : #772178,
+    A100 : #feb7ff,
+    A200 : #fe84ff,
+    A400 : #fd51ff,
+    A700 : #fd37ff,
+    contrast: (
+        50 : #000000,
+        100 : #000000,
+        200 : #000000,
+        300 : #000000,
+        400 : #000000,
+        500 : #ffffff,
+        600 : #ffffff,
+        700 : #ffffff,
+        800 : #ffffff,
+        900 : #ffffff,
+        A100 : #000000,
+        A200 : #000000,
+        A400 : #000000,
+        A700 : #000000,
+    )
+);
+
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
-$candy-app-primary: mat-palette($mat-indigo);
-$candy-app-accent:  mat-palette($mat-pink, A200, A100, A400);
+$zachary-app-primary: mat-palette($my-purple);
+$zachary-app-accent:  mat-palette($mat-pink, A200, A100, A400);
 
 // The warn palette is optional (defaults to red).
-$candy-app-warn:    mat-palette($mat-red);
+$zachary-app-warn:    mat-palette($mat-red);
 
 // Create the theme object (a Sass map containing all of the palettes).
-$candy-app-theme: mat-dark-theme($candy-app-primary, $candy-app-accent, $candy-app-warn);
+$zachary-app-theme: mat-dark-theme($zachary-app-primary, $zachary-app-accent, $zachary-app-warn);
 
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
 // that you are using.
-@include angular-material-theme($candy-app-theme);
+@include angular-material-theme($zachary-app-theme);
