--- a/src/app/modules/code/_main/main.component.html
+++ b/src/app/modules/code/_main/main.component.html
@@ -2,8 +2,15 @@
   <h3 class="text-center">Welcome to Zachary's Code page</h3>
   <h4 class="text-center">This page will showcase different apps that Zachary has made for his
     enjoyment.</h4>
-  <h3>Code to come:</h3>
-  <ul *ngFor="let project of codeinProcess">
-    <li><span class="title">{{project.title}}</span> - <span class="status" [class]="project.statusClass">{{project.status}}</span> - {{project.description}}</li>
+  <h4>Statuses:</h4>
+  <ul>
+    <li *ngFor="let status of statuses"><span [class]="status.class">{{status.title}}</span> -
+      <span [innerHTML]="status.text"></span></li>
+  </ul>
+  <h4>Code to come:</h4>
+  <ul>
+    <li *ngFor="let project of codeinProcess"><span class="title">{{project.title}}</span> -
+      <span [class]="project.statusClass">{{project.status}}</span>
+      - {{project.description}}</li>
   </ul>
 </div>
