--- a/src/z-theme.scss
+++ b/src/z-theme.scss
@@ -43,7 +43,7 @@ $my-purple: (
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
 $zachary-app-primary: mat-palette($my-purple);
-$zachary-app-accent:  mat-palette($mat-pink, A200, A100, A400);
+$zachary-app-accent:  mat-palette($mat-blue, A200, A100, A400);
 
 // The warn palette is optional (defaults to red).
 $zachary-app-warn:    mat-palette($mat-red);
