--- a/src/app/modules/core/core.component.html
+++ b/src/app/modules/core/core.component.html
@@ -2,8 +2,9 @@
   <h1>Welcome to {{ title }}!</h1>
 </div>
 <div class="jumbotron">
-  <p id="coming" *ngIf="passed === true">The <span class="dw">Doctor Who S11 E1:<i>The Woman Who Fell to Earth</i></span> simulcast is coming <span class="dw">{{'2018-10-07T17:45:00Z' | date:'MMMM d, h:mm a z' }}</span>!</p>
-  <p *ngIf="passed === true">Only <app-countdown class="dw" [inputDate]="'2018-10-06T17:45:00Z'">Loading Countdown</app-countdown> until it starts!</p>
+  <p id="coming" *ngIf="passed === false">The <span class="dw">Doctor Who S11 E1:<i>The Woman Who Fell to Earth</i></span> simulcast is coming <span class="dw">{{'2018-10-07T17:45:00Z' | date:'MMMM d, h:mm a z' }}</span>!</p>
+  <p *ngIf="passed === false">Only <app-countdown class="dw" [inputDate]="'2018-10-07T17:45:00Z'">Loading Countdown</app-countdown> until it starts!</p>
+  <p *ngIf="passed === true">Go watch <span class="dw">Doctor Who</span>!</p>
   <div class="embed-responsive embed-responsive-16by9">
     <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/L6QRnULIjv4" frameborder="0" allow="autoplay; encrypted-media"
       allowfullscreen></iframe>
