Wishlist partially translated

--- a/src/app/modules/wishlist/home/home.component.html
+++ b/src/app/modules/wishlist/home/home.component.html
@@ -1,5 +1,14 @@
 <div class="jumbotron">
   <h3 class="text-center">Home Stuff</h3>
-  <p class="text-center">Please go back to the <a routerLink="../main">Main Page</a> to access the current Wishlist Notebook.</p>
-  <app-under-construction></app-under-construction>
+  <ul>
+    <li>
+      <a href="https://www.amazon.com/hz/wishlist/dl/invite/83j2Twy">Amazon Home Wishlist</a>
+    </li>
+    <li>
+      Home automation devices (++++ if they work with Nest or Google Assistant)
+      <ul>
+        <li><a href="https://nest.com/smoke-co-alarm/overview/">Nest Protect mk II</a></li>
+      </ul>
+    </li>
+  </ul>
 </div>
