--- a/src/app/modules/wishlist/other/other.component.html
+++ b/src/app/modules/wishlist/other/other.component.html
@@ -1,5 +1,23 @@
 <div class="jumbotron">
   <h3 class="text-center">Other Stuff</h3>
-  <p class="text-center">Please go back to the <a routerLink="../main">Main Page</a> to access the current Wishlist Notebook.</p>
-  <app-under-construction></app-under-construction>
+  <ul>
+    <li>
+      Movie basket(s) (popcorn, Mike n Ikes, Hot Tamales, etc. for a date night at home)
+    </li>
+    <li>
+      Star Trek memorabilia
+    </li>
+    <li>
+      Fairy Tail memorabilia
+      <ul>
+        <li>I own multiple albums of their music already.</li>
+      </ul>
+    </li>
+    <li>Manga
+      <ul>
+        <li>Can be for any anime I like. One of which is Fairy Tail</li>
+        <li>Desire it to be in Japanese preferably</li>
+      </ul>
+    </li>
+  </ul>
 </div>
