--- a/src/app/modules/wishlist/tech/tech.component.html
+++ b/src/app/modules/wishlist/tech/tech.component.html
@@ -1,5 +1,26 @@
 <div class="jumbotron">
   <h3 class="text-center">Technology</h3>
-  <p class="text-center">Please go back to the <a routerLink="../main">Main Page</a> to access the current Wishlist Notebook.</p>
-  <app-under-construction></app-under-construction>
+  <ul>
+    <li>Accessories
+      <ul>
+        <li><a href="#">Mod Notebook</a>
+          <ul class="list-unstyled pl-3">
+            <li>Lined</li>
+            <li>Color: Prefer Black or Red. Wouldn't be against Gray either</li>
+          </ul>
+        </li>
+      </ul>
+    </li>
+    <li>Devices
+      <ul>
+        <li><a href="#">Automatic Pro</a></li>
+      </ul>
+    </li>
+    <li>Games
+      <ul>
+        <li><a href="#">Steam Wishlist</a></li>
+      </ul>
+    </li>
+    <li><a routerLink="../home">Home Automation</a></li>
+  </ul>
 </div>
