--- a/src/app/modules/wishlist/money/money.component.html
+++ b/src/app/modules/wishlist/money/money.component.html
@@ -1,5 +1,21 @@
 <div class="jumbotron">
   <h3 class="text-center">Money and Gift Cards</h3>
-  <p class="text-center">Please go back to the <a routerLink="../main">Main Page</a> to access the current Wishlist Notebook.</p>
-  <app-under-construction></app-under-construction>
+  <ul>
+    <li>Donations
+      <ul>
+        <li>529 (School) donation. <a href="mailto:Zachary@admiralfeb.net?Subject=529%20Donation">Contact</a> Zachary
+          regarding donations.</li>
+        <li>Donation to any LGBTQ+ friendly charity in my name.</li>
+      </ul>
+    </li>
+    <li>Gift Cards
+      <ul>
+        <li>Amazon</li>
+        <li>Chipotle</li>
+        <li>Best Buy</li>
+        <li>Target</li>
+        <li>Visa Gift Card</li>
+      </ul>
+    </li>
+  </ul>
 </div>
