--- a/src/app/modules/wishlist/tech/tech.component.html
+++ b/src/app/modules/wishlist/tech/tech.component.html
@@ -1,26 +1,17 @@
 <div class="jumbotron">
   <h3 class="text-center">Technology</h3>
   <ul>
-    <li>Accessories
+    <li>Accessories/Devices
       <ul>
-        <li><a href="#">Mod Notebook</a>
-          <ul class="list-unstyled pl-3">
-            <li>Lined</li>
-            <li>Color: Prefer Black or Red. Wouldn't be against Gray either</li>
-          </ul>
-        </li>
+        <li><a href="https://automatic.com/pro">Automatic Pro</a></li>
       </ul>
     </li>
-    <li>Devices
+    <!-- <li>Games
       <ul>
-        <li><a href="#">Automatic Pro</a></li>
+        <li><a href="https://steamcommunity.com/id/Admiralfeb/wishlist">Steam Wishlist</a></li>
+        <li>Note: I prefer PC gaming</li>
       </ul>
-    </li>
-    <li>Games
-      <ul>
-        <li><a href="#">Steam Wishlist</a></li>
-      </ul>
-    </li>
-    <li><a routerLink="../home">Home Automation</a></li>
+    </li> -->
+    <li>Home Automation - Seen on the <a routerLink="../home">Home</a> page</li>
   </ul>
 </div>
