--- a/src/app/modules/wishlist/video/video.component.html
+++ b/src/app/modules/wishlist/video/video.component.html
@@ -1,5 +1,26 @@
 <div class="jumbotron">
   <h3 class="text-center">Video</h3>
-  <p class="text-center">Please go back to the <a routerLink="../main">Main Page</a> to access the current Wishlist Notebook.</p>
-  <app-under-construction></app-under-construction>
+  <ul>
+    <li><i>Big Bang Theory</i> - Seasons 11 or 12</li>
+    <li>Series Sets - Not yet necessary as I can stream them.
+      <ul>
+        <li>Syfy's <i>Eureka</i></li>
+        <li><i>Star Trek</i> - Same as above
+          <ul>
+            <li>TNG</li>
+            <li>DS9</li>
+            <li>Voyager</li>
+            <li>Enterprise</li>
+          </ul>
+        </li>
+        <li><i>StarGate</i> - same as above
+          <ul>
+            <li>SG1</li>
+            <li>Atlantis</li>
+            <li>Universe</li>
+          </ul>
+        </li>
+      </ul>
+    </li>
+  </ul>
 </div>
