--- a/src/app/modules/code/code.component.html
+++ b/src/app/modules/code/code.component.html
@@ -16,9 +16,9 @@
 
     <ul class="nav nav-pills">
       <li>
-        <a class="nav-link" routerLink="main" routerLinkActive="active">Code Home</a>
+        <a class="nav-link" routerLink="main" routerLinkActive="active" (click)="navClick()">Code Home</a>
       </li><li>
-        <a class="nav-link" routerLink="dining_selector" routerLinkActive="active">Dining Selector</a>
+        <a class="nav-link" routerLink="dining_selector" routerLinkActive="active" (click)="navClick()">Dining Selector</a>
       </li>
     </ul>
   </nav>
