--- a/src/app/modules/wishlist/wishlist.component.html
+++ b/src/app/modules/wishlist/wishlist.component.html
@@ -18,25 +18,25 @@
 
     <ul class="nav nav-pills">
       <li>
-        <a class="nav-link" routerLink="main" routerLinkActive="active">Wishlist Home</a>
+        <a class="nav-link" routerLink="main" routerLinkActive="active" (click)="navClick()">Wishlist Home</a>
       </li>
       <li>
-        <a class="nav-link" routerLink="clothing" routerLinkActive="active">Clothing</a>
+        <a class="nav-link" routerLink="clothing" routerLinkActive="active" (click)="navClick()">Clothing</a>
       </li>
       <li>
-        <a class="nav-link" routerLink="home" routerLinkActive="active">Home stuff</a>
+        <a class="nav-link" routerLink="home" routerLinkActive="active" (click)="navClick()">Home stuff</a>
       </li>
       <li>
-        <a class="nav-link" routerLink="money" routerLinkActive="active">Money and Gift Cards</a>
+        <a class="nav-link" routerLink="money" routerLinkActive="active" (click)="navClick()">Money Related</a>
       </li>
       <li>
-        <a class="nav-link" routerLink="other" routerLinkActive="active">Other</a>
+        <a class="nav-link" routerLink="other" routerLinkActive="active" (click)="navClick()">Other</a>
       </li>
       <li>
-        <a class="nav-link" routerLink="tech" routerLinkActive="active">Technology</a>
+        <a class="nav-link" routerLink="tech" routerLinkActive="active" (click)="navClick()">Technology</a>
       </li>
       <li>
-        <a class="nav-link" routerLink="video" routerLinkActive="active">Video</a>
+        <a class="nav-link" routerLink="video" routerLinkActive="active" (click)="navClick()">Video</a>
       </li>
     </ul>
   </nav>
