--- a/src/app/modules/wishlist/_main/main.component.html
+++ b/src/app/modules/wishlist/_main/main.component.html
@@ -1,16 +1,11 @@
 <div id="main" class="jumbotron">
   <h3 class="text-center">Wishlist Home Page</h3>
   <div>
-    <h4 class="text-center">Zachary's Wishlist will be here soon.</h4>
-    <p>Until it arrives, you can access the wishlist via the Microsoft<sup>®</sup>
-      OneNote link below.</p>
-      <div class="loadcontainer"><mat-spinner id="oneNoteLoader" style="margin:0 auto;"></mat-spinner></div>
-    <iframe id="frmOneNote" src="https://onedrive.live.com/embed?cid=9C0BED0D19EFBA31&resid=9C0BED0D19EFBA31%21486051&authkey=AFr1xRe_t7of9yg"
-      width="98" height="120" frameborder="0" scrolling="no">Loading OneNote frame...</iframe>
+    <p> The pages of the wishlist can be accessed from the navigation panel.<br>If on mobile, tap the <span class="material-icons md-12">menu</span> icon at the top of this page to open the panel.</p>
   </div>
+  <p>An option is to make a donation in my name to any LGBTQ+ friendly charity. A few are listed on the <a routerLink="../money">money</a> page.</p>
   <p>If you have any questions, feel free to email me <a href="mailto:Zachary@admiralfeb.net?Subject=Questions%20about%20Wish%20List"
       target="_blank">Zachary@admiralfeb.net</a></p>
   <p>This is a general idea of what I would like. I try to keep it up to date
     as much as possible. I like things that are useful.</p>
-  <p>Another option is to make a donation in my name to any LGBTQ+ friendly charity.</p>
 </div>
