--- a/src/app/modules/wishlist/clothing/clothing.component.html
+++ b/src/app/modules/wishlist/clothing/clothing.component.html
@@ -27,30 +27,33 @@
         <li>Waist: 30</li>
       </ul>
     </li>
-    <li>Earrings - Sterling silver or Surgical Steel<br>Would like at least one of each stone below.<br>
-      <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
+    <li>Earrings -<br>
+      Sterling Silver or Surgical Steel<br>
+      Would like at least one of each stone in the table below.<br>
+      The table is sortable by tapping on the headers.
+      <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8 w-100">
         <ng-container matColumnDef="stone">
           <th mat-header-cell *matHeaderCellDef mat-sort-header> Stone </th>
           <td mat-cell *matCellDef="let element">
-            <div class="mr-5">{{element.stone}} </div>
+            <div class="mr-3">{{element.stone}} </div>
           </td>
         </ng-container>
         <ng-container matColumnDef="month">
           <th mat-header-cell *matHeaderCellDef mat-sort-header> Month </th>
           <td mat-cell *matCellDef="let element">
-            <div class="mr-5">{{element.month}} </div>
+            <div class="mr-3">{{element.month}} </div>
           </td>
         </ng-container>
         <ng-container matColumnDef="count">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>
-            Count
+            Owned
           </th>
           <td mat-cell *matCellDef="let element">
-            <div class="">{{element.count}} </div>
+            <div class="text-center">{{element.count}} </div>
           </td>
         </ng-container>
 
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
       </table>
     </li>
