--- a/src/app/modules/wishlist/clothing/clothing.component.html
+++ b/src/app/modules/wishlist/clothing/clothing.component.html
@@ -49,7 +49,7 @@
             Owned
           </th>
           <td mat-cell *matCellDef="let element">
-            <div class="text-center">{{element.count}} </div>
+            <div class="">{{element.count}} </div>
           </td>
         </ng-container>
 
