--- a/src/styles.css
+++ b/src/styles.css
@@ -3,7 +3,7 @@
 
 html,
 body {
-  background-color: lightgray !important;
+  /* background-color: lightgray !important; */
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   margin: 0 !important;
   padding: 0;
@@ -62,4 +62,9 @@ body {
   color: #f2f2f2;
   text-decoration: none !important;
   font-size: 17px;
+}
+
+.jumbotron {
+  color: black;
+  background-color: darkgray; 
 }
