--- a/src/app/modules/code/_main/main.component.scss
+++ b/src/app/modules/code/_main/main.component.scss
@@ -1,10 +1,12 @@
+@import '../../../../z-theme.scss';
+
 .container {
     margin: 15px;
 }
 .title {
     font-weight: bold;
     /* color: darkblue; */
-    color: rgb(163, 73, 164)
+    color: white;
 }
 h3 {
     font-weight: bold;
