--- a/src/app/modules/wishlist/home/home.component.html
+++ b/src/app/modules/wishlist/home/home.component.html
@@ -5,9 +5,8 @@
       <a href="https://www.amazon.com/hz/wishlist/dl/invite/83j2Twy">Amazon Home Wishlist</a>
     </li>
     <li>
-      Home automation devices (++++ if they work with Nest or Google Assistant)
+      <a routerLink="../tech" matTooltip="Redirect to Tech page" matTooltipPosition="after">Home Automation</a>
       <ul>
-        <li><a href="https://nest.com/smoke-co-alarm/overview/">Nest Protect mk II</a></li>
       </ul>
     </li>
   </ul>
