--- a/src/app/modules/wishlist/money/money.component.html
+++ b/src/app/modules/wishlist/money/money.component.html
@@ -22,6 +22,7 @@
         <li><a href="https://www.chipotle.com/en-us/shop/gift_cards/gift_cards.aspx">Chipotle</a></li>
         <li><a href="https://firehouse.giftcards.com/pages/home">FireHouse Subs</a></li>
         <li><a href="https://www.noodles.com/gift-cards/">Noodles and Company</a></li>
+        <li><a href="https://prepaidcards.quiktrip.com/">QuikTrip</a></li>
         <li><a href="http://www.target.com/c/giftcards/-/N-5xsxu#?lnk=gnav_giftcards">Target</a></li>
         <li>Visa Gift Card</li>
       </ul>
