--- a/src/app/modules/wishlist/video/video.component.html
+++ b/src/app/modules/wishlist/video/video.component.html
@@ -2,10 +2,10 @@
   <h3 class="text-center">Video</h3>
   <ul>
     <li><i>Big Bang Theory</i> - Seasons 11 or 12</li>
-    <li>Series Sets - Not yet necessary as I can stream them.
+    <li>Series Sets - Not currently necessary as I can stream them.
       <ul>
         <li>Syfy's <i>Eureka</i></li>
-        <li><i>Star Trek</i> - Same as above
+        <li><i>Star Trek</i>
           <ul>
             <li>TNG</li>
             <li>DS9</li>
@@ -13,7 +13,7 @@
             <li>Enterprise</li>
           </ul>
         </li>
-        <li><i>StarGate</i> - same as above
+        <li><i>StarGate</i>
           <ul>
             <li>SG1</li>
             <li>Atlantis</li>
