--- a/src/app/modules/wishlist/_main/main.component.html
+++ b/src/app/modules/wishlist/_main/main.component.html
@@ -6,6 +6,6 @@
   <p>An option is to make a donation in my name to any LGBTQ+ friendly charity. A few are listed on the <a routerLink="../money">money</a> page.</p>
   <p>If you have any questions, feel free to email me <a href="mailto:Zachary@admiralfeb.net?Subject=Questions%20about%20Wish%20List"
       target="_blank">Zachary@admiralfeb.net</a></p>
-  <p>This is a general idea of what I would like. I try to keep it up to date
-    as much as possible. I like things that are useful.</p>
+  <p>This is a general idea of what I would like. I like things that are useful.</p>
+  <p class="small text-right">Last update: 2018-10-10</p>
 </div>
