--- a/src/app/modules/wishlist/tech/tech.component.html
+++ b/src/app/modules/wishlist/tech/tech.component.html
@@ -4,6 +4,29 @@
     <li>Accessories/Devices
       <ul>
         <li><a href="https://automatic.com/pro">Automatic Pro</a></li>
+        <li>Google Pixel 3<br>
+          Additionally with the Pixel 3:
+          <ul>
+            <li>Wireless Charger</li>
+          </ul>
+        </li>
+        <li>Google Pixel Slate<br>
+          Additionally with the Pixel Slate:
+          <ul>
+            <li>Folio Keyboard</li>
+            <li>Pixel Slate Pen</li>
+          </ul>
+        </li>
+        <li>A new computer tower with the following:
+          <ul>
+            <li>RAM 16 GB minimum</li>
+            <li>500 GB (minimum) SSD HD</li>
+            <li>1 TB HD (this may be SSD or not)</li>
+            <li>Processor: Unknown</li>
+            <li>Motherboard: Unknown</li>
+            <li>Graphics card: Unknown</li>
+          </ul>
+        </li>
       </ul>
     </li>
     <!-- <li>Games
@@ -12,6 +35,12 @@
         <li>Note: I prefer PC gaming</li>
       </ul>
     </li> -->
-    <li>Home Automation - Seen on the <a routerLink="../home">Home</a> page</li>
+    <li>Home Automation
+      <ul>
+        <li><a href="https://nest.com/smoke-co-alarm/overview/">Nest Protect mk II</a></li>
+        <li>Google Home Hub<br>
+        <span class="note">I have preordered one of these devices for use in the kitchen. I may desire others should that one work well.</span></li>
+      </ul>
+    </li>
   </ul>
 </div>
