--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,5 @@
-@import './z-theme-variables.scss'; 
+/* @import '~@angular/material/prebuilt-themes/deeppurple-amber.css'; */
+/* @import './z-theme.scss' */; 
 
 html,
 body {
@@ -9,12 +10,6 @@ body {
   --colorZ: rgb(163, 73, 164);
 }
 
-a {
-  color: mat-color($z-primary);
-}
-a:hover {
-  color: mat-color($z-accent);
-}
 
 h1 {
   margin: 0;
